added latest results collection view data in leagueDetailsViewController

--- a/Sports/View/Main/Base.lproj/Main.storyboard
+++ b/Sports/View/Main/Base.lproj/Main.storyboard
@@ -194,30 +194,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LatestResultsCollectionViewCell" id="LCC-1K-uf6" customClass="LatestResultsCollectionViewCell" customModule="Sports" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Dpn-O6-UF1">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PqT-DJ-w0d">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="PqT-DJ-w0d" secondAttribute="bottom" id="Bfj-mm-JoO"/>
-                                                <constraint firstItem="PqT-DJ-w0d" firstAttribute="leading" secondItem="Dpn-O6-UF1" secondAttribute="leading" id="hYq-NS-eDo"/>
-                                                <constraint firstAttribute="trailing" secondItem="PqT-DJ-w0d" secondAttribute="trailing" id="rCf-oI-9tD"/>
-                                                <constraint firstItem="PqT-DJ-w0d" firstAttribute="top" secondItem="Dpn-O6-UF1" secondAttribute="top" id="ttz-vT-0PZ"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <connections>
-                                            <outlet property="latestResultsImageView" destination="PqT-DJ-w0d" id="aQD-PM-Yaw"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RPi-ZV-Zmj">
                                 <rect key="frame" x="0.0" y="683" width="414" height="179"/>
