--- a/Sports/View/Main/Base.lproj/Main.storyboard
+++ b/Sports/View/Main/Base.lproj/Main.storyboard
@@ -293,6 +293,82 @@
             </objects>
             <point key="canvasLocation" x="2691" y="-295"/>
         </scene>
+        <!--Team Details View Controller-->
+        <scene sceneID="WkS-h3-LPK">
+            <objects>
+                <viewController storyboardIdentifier="TeamDetailsViewController" id="45X-b0-aIr" customClass="TeamDetailsViewController" customModule="Sports" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NA1-hX-NS8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="teamName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8P-mZ-Add">
+                                <rect key="frame" x="165.5" y="348" width="83" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tYh-Lj-YL9">
+                                <rect key="frame" x="95" y="84" width="224" height="224"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="tYh-Lj-YL9" secondAttribute="height" multiplier="1:1" id="hkd-6r-df4"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="teamSince" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F4N-Fa-3Pb">
+                                <rect key="frame" x="166.5" y="430" width="81" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="teamSport" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHr-Xb-LfV">
+                                <rect key="frame" x="166.5" y="471" width="81" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="teamLeague" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NN-iY-4iG">
+                                <rect key="frame" x="160" y="512" width="94" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="teamCountry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOM-y7-7rF">
+                                <rect key="frame" x="157" y="389" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="h65-2t-bQ2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rHr-Xb-LfV" firstAttribute="top" secondItem="F4N-Fa-3Pb" secondAttribute="bottom" constant="20" id="1D2-cE-LVy"/>
+                            <constraint firstItem="tYh-Lj-YL9" firstAttribute="top" secondItem="h65-2t-bQ2" secondAttribute="top" constant="40" id="1dA-jD-qmi"/>
+                            <constraint firstItem="9NN-iY-4iG" firstAttribute="top" secondItem="rHr-Xb-LfV" secondAttribute="bottom" constant="20" id="5P5-on-cgf"/>
+                            <constraint firstItem="i8P-mZ-Add" firstAttribute="top" secondItem="tYh-Lj-YL9" secondAttribute="bottom" constant="40" id="A7e-WY-q8f"/>
+                            <constraint firstItem="EOM-y7-7rF" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="FWi-Jn-XSY"/>
+                            <constraint firstItem="EOM-y7-7rF" firstAttribute="top" secondItem="i8P-mZ-Add" secondAttribute="bottom" constant="20" id="HZi-uv-w4y"/>
+                            <constraint firstItem="tYh-Lj-YL9" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="Mnq-6O-iQc"/>
+                            <constraint firstItem="F4N-Fa-3Pb" firstAttribute="top" secondItem="EOM-y7-7rF" secondAttribute="bottom" constant="20" id="NhL-ry-UNw"/>
+                            <constraint firstItem="9NN-iY-4iG" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="VQa-ph-xac"/>
+                            <constraint firstItem="F4N-Fa-3Pb" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="gq8-aK-ppv"/>
+                            <constraint firstItem="i8P-mZ-Add" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="hDQ-kJ-WUe"/>
+                            <constraint firstItem="rHr-Xb-LfV" firstAttribute="centerX" secondItem="NA1-hX-NS8" secondAttribute="centerX" id="iNU-d4-HNd"/>
+                            <constraint firstItem="tYh-Lj-YL9" firstAttribute="height" secondItem="NA1-hX-NS8" secondAttribute="height" multiplier="1:4" id="uTG-mo-zKO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="teamBadgeImageView" destination="tYh-Lj-YL9" id="YJq-oK-ZEA"/>
+                        <outlet property="teamCountryLabel" destination="EOM-y7-7rF" id="pSh-J8-hjh"/>
+                        <outlet property="teamLeagueLabel" destination="9NN-iY-4iG" id="ePZ-hr-VL2"/>
+                        <outlet property="teamNameLabel" destination="i8P-mZ-Add" id="EXW-SI-dGO"/>
+                        <outlet property="teamSinceLabel" destination="F4N-Fa-3Pb" id="Vnt-MP-y6F"/>
+                        <outlet property="teamSportLabel" destination="rHr-Xb-LfV" id="UJF-1L-CMi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wfp-rP-93z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3358" y="-295"/>
+        </scene>
         <!--Player View Controller-->
         <scene sceneID="xs3-O3-Nru">
             <objects>
