--- a/Sports/View/Leagues/LeagueTableViewCell.xib
+++ b/Sports/View/Leagues/LeagueTableViewCell.xib
@@ -9,27 +9,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LeagueTableViewCell" rowHeight="109" id="KGk-i7-Jjw" customClass="LeagueTableViewCell" customModule="Sports" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LeagueTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="LeagueTableViewCell" customModule="Sports" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fMW-OH-sHL">
-                        <rect key="frame" x="0.0" y="-47" width="203" height="203"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fMW-OH-sHL">
+                        <rect key="frame" x="5" y="0.0" width="70" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="fMW-OH-sHL" secondAttribute="height" id="OxI-z3-LFd"/>
+                            <constraint firstAttribute="width" constant="70" id="Jh7-T2-p0t"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2s-3V-XsG">
-                        <rect key="frame" x="223" y="44.5" width="42" height="20.5"/>
+                        <rect key="frame" x="95" y="25" width="170" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fld-fg-ua8">
-                        <rect key="frame" x="285" y="39" width="30" height="31"/>
+                        <rect key="frame" x="285" y="18" width="30" height="34"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="pCe-6P-nmu"/>
                         </constraints>
@@ -41,14 +41,14 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="centerY" secondItem="fMW-OH-sHL" secondAttribute="centerY" id="47r-Im-VJJ"/>
+                    <constraint firstItem="fMW-OH-sHL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="8iD-yX-aq2"/>
+                    <constraint firstItem="fMW-OH-sHL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Cc0-TA-TCd"/>
                     <constraint firstAttribute="trailing" secondItem="fld-fg-ua8" secondAttribute="trailing" constant="5" id="OJG-GV-mB1"/>
                     <constraint firstItem="fld-fg-ua8" firstAttribute="leading" secondItem="h2s-3V-XsG" secondAttribute="trailing" constant="20" id="Pon-jM-Grv"/>
+                    <constraint firstItem="h2s-3V-XsG" firstAttribute="leading" secondItem="fMW-OH-sHL" secondAttribute="trailing" constant="20" id="Tkg-lt-1BH"/>
                     <constraint firstItem="h2s-3V-XsG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bLj-y9-4YR"/>
-                    <constraint firstItem="h2s-3V-XsG" firstAttribute="leading" secondItem="fMW-OH-sHL" secondAttribute="trailing" constant="20" id="ee2-GJ-SVu"/>
-                    <constraint firstItem="fMW-OH-sHL" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="203:109" id="s3t-Ew-rjy"/>
+                    <constraint firstAttribute="bottom" secondItem="fMW-OH-sHL" secondAttribute="bottom" id="l7E-eG-G5R"/>
                     <constraint firstItem="fld-fg-ua8" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vLi-hC-sYq"/>
-                    <constraint firstItem="fMW-OH-sHL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="zoz-jQ-W8S"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
