--- a/Sports/View/Leagues/LeagueDetails/CollectionViewCells/LatestResultsCollectionViewCell.xib
+++ b/Sports/View/Leagues/LeagueDetails/CollectionViewCells/LatestResultsCollectionViewCell.xib
@@ -16,74 +16,74 @@
                 <rect key="frame" x="0.0" y="0.0" width="370" height="160"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hTi-Su-FIj">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hTi-Su-FIj">
                         <rect key="frame" x="0.0" y="0.0" width="370" height="160"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="homeTeam" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avI-vG-f9h">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="homeTeam" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avI-vG-f9h">
                         <rect key="frame" x="0.0" y="20" width="96.5" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="WLi-AM-6pf"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="16"/>
+                        <color key="textColor" red="0.023529411764705882" green="0.15686274509803921" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="awayTeam" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHt-8R-OXg">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="awayTeam" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHt-8R-OXg">
                         <rect key="frame" x="240" y="34" width="99" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="twS-Md-QKg"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="16"/>
+                        <color key="textColor" red="0.023529411764705882" green="0.15686274509803921" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="homeScore" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LT1-4S-ZH0">
                         <rect key="frame" x="26" y="63" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="30"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="awayScore" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOJ-TP-z5K">
                         <rect key="frame" x="238" y="64" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="30"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="date" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eaW-50-6b8">
                         <rect key="frame" x="136" y="93" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="15"/>
+                        <color key="textColor" red="0.023529411764705882" green="0.15686274509803921" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="time" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOa-D5-TAp">
                         <rect key="frame" x="136" y="119" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="15"/>
+                        <color key="textColor" red="0.023529411764705882" green="0.15686274509803921" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="IOa-D5-TAp" firstAttribute="top" secondItem="eaW-50-6b8" secondAttribute="bottom" constant="10" id="0PO-WL-R9L"/>
-                <constraint firstItem="avI-vG-f9h" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="40" id="1gc-uN-0IO"/>
+                <constraint firstItem="IOa-D5-TAp" firstAttribute="top" secondItem="eaW-50-6b8" secondAttribute="bottom" constant="8" id="0PO-WL-R9L"/>
+                <constraint firstItem="avI-vG-f9h" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="12" id="1gc-uN-0IO"/>
                 <constraint firstItem="IOa-D5-TAp" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="1ob-dr-LgV"/>
-                <constraint firstItem="LT1-4S-ZH0" firstAttribute="top" secondItem="avI-vG-f9h" secondAttribute="bottom" constant="20" id="2Vs-zh-hgY"/>
                 <constraint firstItem="eaW-50-6b8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="2gg-K1-0xY"/>
                 <constraint firstItem="IOa-D5-TAp" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="33d-vP-FkS"/>
-                <constraint firstItem="avI-vG-f9h" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="49E-rN-JoD"/>
-                <constraint firstAttribute="bottom" secondItem="IOa-D5-TAp" secondAttribute="bottom" constant="20" id="7iO-pg-ZUq"/>
-                <constraint firstItem="QOJ-TP-z5K" firstAttribute="top" secondItem="FHt-8R-OXg" secondAttribute="bottom" constant="20" id="9so-Cd-3Zw"/>
+                <constraint firstItem="avI-vG-f9h" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="24" id="49E-rN-JoD"/>
+                <constraint firstAttribute="bottom" secondItem="IOa-D5-TAp" secondAttribute="bottom" constant="8" id="7iO-pg-ZUq"/>
                 <constraint firstItem="eaW-50-6b8" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="Gnb-fz-BVN"/>
                 <constraint firstItem="hTi-Su-FIj" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IJY-EJ-BqC"/>
-                <constraint firstItem="LT1-4S-ZH0" firstAttribute="width" secondItem="avI-vG-f9h" secondAttribute="width" multiplier="1.02591" id="MEt-Wf-MOU"/>
-                <constraint firstItem="FHt-8R-OXg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="40" id="Q3V-4N-m6p"/>
+                <constraint firstItem="LT1-4S-ZH0" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="MEt-Wf-MOU"/>
+                <constraint firstItem="FHt-8R-OXg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="12" id="Q3V-4N-m6p"/>
+                <constraint firstItem="QOJ-TP-z5K" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="1:2" id="TuS-PJ-Yba"/>
                 <constraint firstAttribute="bottom" secondItem="hTi-Su-FIj" secondAttribute="bottom" id="jnA-UA-xbR"/>
-                <constraint firstItem="QOJ-TP-z5K" firstAttribute="width" secondItem="FHt-8R-OXg" secondAttribute="width" id="jss-2c-Ees"/>
-                <constraint firstAttribute="trailing" secondItem="FHt-8R-OXg" secondAttribute="trailing" id="m3g-Wa-itg"/>
-                <constraint firstItem="LT1-4S-ZH0" firstAttribute="leading" secondItem="avI-vG-f9h" secondAttribute="leading" id="rwl-cc-uE7"/>
-                <constraint firstItem="QOJ-TP-z5K" firstAttribute="leading" secondItem="FHt-8R-OXg" secondAttribute="leading" id="vLE-hM-38U"/>
+                <constraint firstAttribute="trailing" secondItem="FHt-8R-OXg" secondAttribute="trailing" constant="24" id="m3g-Wa-itg"/>
+                <constraint firstItem="QOJ-TP-z5K" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="qnp-EG-UY2"/>
+                <constraint firstItem="LT1-4S-ZH0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rwl-cc-uE7"/>
+                <constraint firstItem="QOJ-TP-z5K" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="vLE-hM-38U"/>
                 <constraint firstItem="hTi-Su-FIj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="vf3-Gh-yrs"/>
+                <constraint firstItem="LT1-4S-ZH0" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="xo9-6b-ujO"/>
                 <constraint firstAttribute="trailing" secondItem="hTi-Su-FIj" secondAttribute="trailing" id="zga-BS-lSe"/>
             </constraints>
             <size key="customSize" width="370" height="160"/>
