some UI improvements in the launch screen

--- a/Sports/View/Main/Base.lproj/Main.storyboard
+++ b/Sports/View/Main/Base.lproj/Main.storyboard
@@ -417,8 +417,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="6mc-ea-QKH"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundGradientView" destination="lgM-EH-PYT" id="OoP-pT-xZe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AMj-2g-9FK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
